# aoc-rust-template

./: .gitignore  Cargo.toml  README.md  cargo_template.toml  justfile  main_template.rs
.github/workflows/: rust.yml
day0X/: Cargo.toml
santas_little_helpers/: Cargo.toml
santas_little_helpers/src/: lib.rs
